--- a/carousel.html
+++ b/carousel.html
@@ -12,7 +12,7 @@
 
         <div id="caurosalWrapper" class="cau">
             <div class="cau-prev">
-                <a href="javascript:void()"><span>P</span></a>
+                <a href="javascript:void(0)"><span>Prev</span></a>
             </div>    
             <div class="cau-body">
                  <div class="cau-items">
@@ -42,10 +42,13 @@
                 <div class="clear"></div>
             </div>
             <div class="cau-next">
-                <a href="javascript:void()"><span>N</span></a>
+                <a href="javascript:void(0)"><span>Next</span></a>
             </div>
-        <div class="clear"></div>
-    </div>
+            <div class="clear"></div>
+            <div class="pager" style="display:none;">
+                <span class="item">*</span>
+            </div>
+       </div>
 
     </div>
 </body>
